--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@react-navigation/native": "^6.1.2",
     "react": "18.1.0",
-    "react-native": "0.70.6"
+    "react-native": "0.70.6",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
