--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "format": "prettier --write ./src"
   },
   "dependencies": {
+    "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
     "@reduxjs/toolkit": "^1.9.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.3",
+    "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-vector-icons": "^9.2.0",
