Add redux and initial navigation

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,9 @@
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "baseUrl": "./src",
     "paths": {
+      "@navigation/*": ["navigation/*"],
       "@components/*": ["components/*"],
+      "@screens/*": ["screens/*"],
       "@appstate/*": ["redux/*"]
     }
   }
