--- a/package.json
+++ b/package.json
@@ -22,8 +22,11 @@
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
+    "react-native-sensitive-info": "^5.5.8",
     "react-native-vector-icons": "^9.2.0",
-    "react-redux": "^8.0.5"
+    "react-redux": "^8.0.5",
+    "redux-persist": "^6.0.0",
+    "redux-persist-sensitive-storage": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
