--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@reduxjs/toolkit": "^1.9.1",
     "react": "18.1.0",
     "react-native": "0.70.6",
+    "react-native-dropdown-picker": "^5.4.4",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-paper": "^5.1.3",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
     "react-native-sensitive-info": "^5.5.8",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^9.2.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
