--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "test": "jest",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "lint:fix": "eslint . --ext .js,.jsx,.ts,.tsx --fix",
-    "format": "prettier --write ./src"
+    "format": "prettier --write ./src",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-navigation/drawer": "^6.5.7",
     "@react-navigation/native": "^6.1.2",
     "@reduxjs/toolkit": "^1.9.1",
+    "patch-package": "^7.0.0",
+    "postinstall-postinstall": "^2.1.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
     "react-native-dropdown-picker": "^5.4.4",
